almost done with html css

--- a/todo-project/src/styles.css
+++ b/todo-project/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-image: linear-gradient(to left bottom, #2f9078, #00878c, #007b9d, #006ba3, #43589a);
+    background-size: 100% 1000px;
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
