separated in different components and finished css

--- a/todo-project/src/app/container/container.component.html
+++ b/todo-project/src/app/container/container.component.html
@@ -1,15 +1,5 @@
 <div class="container">
     <h3>Todo List</h3>
-    <div class="add-container">
-        <input type="text" placeholder="todo...">
-        <button class="add-btn">Add</button>
-    </div>
-    
-    <div class="result-container">
-        <p>example</p>
-        <p>example</p>
-        <p>example</p>
-        <p>example</p>
-        <p>example</p>
-    </div>
+    <app-input-field></app-input-field>
+    <app-result-container></app-result-container>
 </div>
