--- a/todo-project/src/app/container/container.component.css
+++ b/todo-project/src/app/container/container.component.css
@@ -1,41 +1,21 @@
 .container {
-    border: 1px solid black;
+    border: 2px solid black;
     display: flex;
     justify-content: center;
+    align-items: center;
     text-align: center;
     flex-direction: column;
-    width: 350px;
-    height: auto;
+    width: 450px;
+    height: 550px;
     border-radius: 0.4em;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+    background-color: rgb(66, 189, 111);
 }
 
-.add-container {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-
-.container input {
-    border: none; /* Remove default border */
-    outline: none; /* Remove default outline */
-    padding: 5px 0; /* Adjust padding as needed */
-    border-bottom: 1px solid black; /* Add underline */
-    background: none;
-}
-
-.container input::placeholder {
-    font-weight: bold;
-    color: rgba(0, 0, 0, 0.6);
-}
-
-.container input:focus {
-    border-bottom-color: red;
-}
-
-.add-btn {
-    background-color: rgb(229, 198, 161);
-    padding: 7px 14px;
-    border-radius: 10px;
+.container h3 {
+    font-size: 30px;
+    position: fixed;
+    bottom: 75%;
 }
 
 .container ul {
