--- a/todo-project/src/styles.css
+++ b/todo-project/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 body {
+    font: 16px/1.5 'PT Sans', 'sans-serif';
     padding: 0;
     margin: 0;
     box-sizing: border-box;
