--- a/todo-project/src/app/input-field/input-field.component.html
+++ b/todo-project/src/app/input-field/input-field.component.html
@@ -1,4 +1,4 @@
 <div class="add-container">
-    <input type="text" placeholder="todo...">
-    <button class="add-btn">Add</button>
+    <input type="text" placeholder="todo..." [(ngModel)]="newItem">
+    <button class="add-btn" (click)="inputDataHandler()">Add</button>
 </div>
