Added the ul into separate component

--- a/todo-project/src/app/result-container/result-container.component.html
+++ b/todo-project/src/app/result-container/result-container.component.html
@@ -1,5 +1,3 @@
 <div class="result-container">
-  <ul>
-    <li *ngFor="let item of newItem">{{item}}</li>
-  </ul>
+  <app-list-items [items]="newItem" ></app-list-items>
 </div>
